# cmake

./: CMakeLists.txt  README.md  hello.cpp  main.cpp
